# animail

./: Animail.kdevelop  Animail.kdevses  Makefile  Makefile.am  Makefile.in  Makefile.org  README  aclocal.m4  animail  animail.e3p  animail.e3s  animail.spec  borrame.py  compile.sh  config.cache  config.status  configure  configure.in  description-pak  setup.py
autopackage/: default.apspec
debian/: changelog  control  copyright  files  prerm  rules
debian/.svn/: entries
debian/.svn/text-base/: changelog.svn-base  postinst.svn-base
debian/tmp/DEBIAN/: control  md5sums  postinst  prerm
docs/: animail-up  animail.2  animailrc  changelog.txt  docs.html
docs/.svn/: entries
docs/.svn/text-base/: animail-down.svn-base  animailrc.svn-base  changelog.txt.svn-base  copyright.txt.svn-base  credits.txt.svn-base  docs-es.html.svn-base
docs/doc-es/: docs.html
docs/doc-es/.svn/: entries
po/: de.po  es.po  messages.po
po/.svn/: entries
po/.svn/text-base/: es.po.svn-base  it.po.svn-base  messages.po.svn-base
src/: AnimailMain.py  AnimailMain.pyo  __init__.pyo  configlib.pyo  configlib.py~  general.pyo  imap.py  imap.pyo  imapslib.py  imapslib.pyo  interface.ui  logger.pyo  mailserver.py  mailserver.pyo  pop3.py  pop3.pyo  popslib.pyo  postfilter.pyo  smtp.py  smtp.pyo
src/.svn/: dir-prop-base  entries
src/.svn/text-base/: configlib.py.svn-base  general.py.svn-base  popslib.py.svn-base  postfilter.py.svn-base  pycheck.svn-base  qtif.py.svn-base  (+1 more)
src/copia/: AnimailMain.py  configlib.py  general.py  imap.py  logger.py  mailserver.py  pop3.py  smtp.py
(+45 files in other folders)
