# Ver con automake1.8 a ver si tiene soporte Python (y docu)...

SUFFIXES = .py
bin_SCRIPTS = animail 

				  src/AnimailMain.py src/configlib.py src/general.py \
				  src/imap.py src/imapslib.py src/logger.py src/mailserver.py \
				  src/pop3.py src/popslib.py src/postfilter.py src/smtp.py

man_MANS = docs/animail.2
